--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -80,10 +80,9 @@
 
 
                 <TextView
-                    android:id="@+id/tv_name"
+                    android:id="@+id/tvName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Jonathan Putra"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="@color/black" />
@@ -92,10 +91,9 @@
 
 
                 <TextView
-                    android:id="@+id/tv_email"
+                    android:id="@+id/tvEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="jhonputra00@gmail.com"
                     android:textSize="16sp"
                     android:textColor="@color/black" />
             </LinearLayout>
