--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,33 +3,60 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/_bg__signup_page_ek2_color">
+    android:background="#F9F9F9">
 
-    <ImageView
-        android:id="@+id/btn_back"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_back"
-        android:contentDescription="@string/back_button"
+    <LinearLayout
+        android:id="@+id/llProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_back"
+            android:contentDescription="@string/back_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginVertical="16dp"
+            android:layout_marginEnd="10dp"/>
+        <TextView
+            android:id="@+id/tvProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:layout_gravity="center_vertical"
+            android:text="Profile"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/profile_section"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/btn_back"
+        app:layout_constraintTop_toBottomOf="@id/llProfile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:cardCornerRadius="10dp"
-        android:layout_margin="16dp">
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="4dp"
+        app:cardElevation="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="@color/green_splash"
             android:padding="24dp">
 
             <androidx.cardview.widget.CardView
@@ -61,13 +88,13 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white" />
                 <TextView
                     android:id="@+id/tvEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -81,7 +108,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:cardCornerRadius="10dp"
-        android:layout_margin="16dp">
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,7 +124,8 @@
                 android:padding="16dp"
                 android:text="Edit Profile"
                 android:textSize="16sp"
-                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textColor="#666666"
                 android:drawableEnd="@drawable/ic_arrow"
                 android:drawablePadding="8dp" />
 
@@ -112,7 +141,8 @@
                 android:padding="16dp"
                 android:text="Ganti Password"
                 android:textSize="16sp"
-                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textColor="#666666"
                 android:drawableEnd="@drawable/ic_arrow"
                 android:drawablePadding="8dp" />
 
@@ -128,7 +158,8 @@
                 android:padding="16dp"
                 android:text="Hapus Akun"
                 android:textSize="16sp"
-                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textColor="#666666"
                 android:drawableEnd="@drawable/ic_arrow"
                 android:drawablePadding="8dp" />
         </LinearLayout>
@@ -142,7 +173,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="16dp"
         android:text="More"
-        android:gravity=""
         android:textSize="16sp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -159,7 +189,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:cardCornerRadius="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp">
 
@@ -176,7 +206,8 @@
                 android:padding="16dp"
                 android:text="@string/help_support"
                 android:textSize="16sp"
-                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textColor="#666666"
                 android:drawableEnd="@drawable/ic_arrow"
                 android:drawablePadding="8dp" />
 
@@ -192,7 +223,8 @@
                 android:padding="16dp"
                 android:text="Tentang Kami"
                 android:textSize="16sp"
-                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textColor="#666666"
                 android:drawableEnd="@drawable/ic_arrow"
                 android:drawablePadding="8dp" />
         </LinearLayout>
