--- a/app/src/main/res/layout/dialog_edit_profile.xml
+++ b/app/src/main/res/layout/dialog_edit_profile.xml
@@ -6,6 +6,16 @@
     android:padding="16dp"
     android:background="@drawable/form_edit_profile">
 
+    <TextView
+        android:id="@+id/tv_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Edit Profile"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_marginBottom="20dp" />
 
     <!-- Profile Picture -->
     <androidx.cardview.widget.CardView
@@ -23,14 +33,7 @@
             android:layout_height="120dp"
             android:layout_marginEnd="16dp"
             app:srcCompat="@drawable/img_user" />
-
-
     </androidx.cardview.widget.CardView>
-
-
-
-
-
 
     <TextView
         android:id="@+id/nameText"
@@ -38,10 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/regis_nama"
-        android:textColor="#000000"
+        android:textColor="#666666"
         android:textSize="16sp"
         android:textStyle="bold" />
-
 
     <!-- Name Input -->
     <EditText
@@ -61,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/regis_email"
-        android:textColor="#000000"
+        android:textColor="#666666"
         android:textSize="16sp"
         android:textStyle="bold" />
 
