--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -23,7 +23,7 @@
             android:id="@+id/tx_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginTop="80dp"
             android:text="History"
             android:textSize="20sp"
             android:textStyle="bold"
