--- a/app/src/main/res/layout/activity_grading.xml
+++ b/app/src/main/res/layout/activity_grading.xml
@@ -315,7 +315,7 @@
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/salt_value"
+                            android:id="@+id/sodium_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/value_100"
@@ -516,7 +516,6 @@
                         android:textColor="#666666"
                         android:layout_marginBottom="8dp" />
                 </LinearLayout>
-
 
                 <Button
                     android:id="@+id/okButton"
