--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,20 +1,26 @@
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DCFAD7"
-    android:padding="16dp">
+    android:background="#DCFAD7">
+
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/contentLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@android:color/white"
         android:padding="16dp"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:elevation="4dp"
         android:clipToPadding="false"
-        android:layout_gravity="center">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
 
         <TextView
             android:id="@+id/nutritionFactsTitle"
@@ -24,7 +30,8 @@
             android:textSize="30sp"
             android:textStyle="bold"
             android:textColor="#000000"
-            android:gravity="center"/>
+            android:gravity="center" />
+
 
         <View
             android:layout_width="match_parent"
@@ -32,6 +39,7 @@
             android:background="#000000"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp" />
+
 
         <TextView
             android:id="@+id/productNameLabel"
@@ -43,6 +51,7 @@
             android:textColor="#000000"
             android:layout_marginBottom="8dp" />
 
+
         <EditText
             android:id="@+id/productNameEditText"
             android:layout_width="match_parent"
@@ -53,6 +62,7 @@
             android:background="@null"
             android:padding="8dp" />
 
+
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
@@ -60,13 +70,15 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp" />
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="2dp"
             android:orientation="horizontal"
             android:weightSum="10"
             android:paddingVertical="8dp">
+
 
             <TextView
                 android:layout_width="0dp"
@@ -77,6 +89,7 @@
                 android:textStyle="bold"
                 android:textColor="#000000"
                 android:gravity="center_vertical" />
+
 
             <EditText
                 android:id="@+id/servingEditText"
@@ -90,6 +103,7 @@
                 android:background="@null"
                 android:gravity="end" />
 
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -101,11 +115,14 @@
                 android:gravity="center_vertical|end" />
         </LinearLayout>
 
+
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="#000000"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -114,6 +131,7 @@
             android:orientation="horizontal"
             android:weightSum="10"
             android:paddingVertical="8dp">
+
 
             <TextView
                 android:layout_width="0dp"
@@ -125,6 +143,7 @@
                 android:textColor="#000000"
                 android:gravity="center_vertical" />
 
+
             <EditText
                 android:id="@+id/proteinEditText"
                 android:layout_width="0dp"
@@ -133,9 +152,11 @@
                 android:inputType="number"
                 android:text="@string/value_100"
                 android:textSize="16sp"
+                android:hint="Not Found"
                 android:textColor="#000000"
                 android:background="@null"
                 android:gravity="end" />
+
 
             <TextView
                 android:layout_width="0dp"
@@ -148,6 +169,7 @@
                 android:gravity="center_vertical|end" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -155,6 +177,7 @@
             android:layout_marginBottom="10dp"
             android:weightSum="10"
             android:paddingVertical="8dp">
+
 
             <TextView
                 android:layout_width="0dp"
@@ -166,6 +189,7 @@
                 android:textColor="#000000"
                 android:gravity="center_vertical" />
 
+
             <EditText
                 android:id="@+id/energyEditText"
                 android:layout_width="0dp"
@@ -173,10 +197,12 @@
                 android:layout_weight="5"
                 android:inputType="number"
                 android:text="@string/value_100"
+                android:hint="Not Found"
                 android:textSize="16sp"
                 android:textColor="#000000"
                 android:background="@null"
                 android:gravity="end" />
+
 
             <TextView
                 android:layout_width="0dp"
@@ -189,6 +215,7 @@
                 android:gravity="center_vertical|end" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -196,6 +223,7 @@
             android:layout_marginBottom="10dp"
             android:weightSum="10"
             android:paddingVertical="8dp">
+
 
             <TextView
                 android:layout_width="0dp"
@@ -207,6 +235,7 @@
                 android:textColor="#000000"
                 android:gravity="center_vertical" />
 
+
             <EditText
                 android:id="@+id/fatEditText"
                 android:layout_width="0dp"
@@ -214,10 +243,12 @@
                 android:layout_weight="5"
                 android:inputType="number"
                 android:text="@string/value_100"
+                android:hint="Not Found"
                 android:textSize="16sp"
                 android:textColor="#000000"
                 android:background="@null"
                 android:gravity="end" />
+
 
             <TextView
                 android:layout_width="0dp"
@@ -230,6 +261,7 @@
                 android:gravity="center_vertical|end" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -237,6 +269,7 @@
             android:layout_marginBottom="10dp"
             android:weightSum="10"
             android:paddingVertical="8dp">
+
 
             <TextView
                 android:layout_width="0dp"
@@ -248,6 +281,7 @@
                 android:textColor="#000000"
                 android:gravity="center_vertical" />
 
+
             <EditText
                 android:id="@+id/saturatedFatEditText"
                 android:layout_width="0dp"
@@ -255,10 +289,12 @@
                 android:layout_weight="4"
                 android:inputType="number"
                 android:text="@string/value_100"
+                android:hint="Not Found"
                 android:textSize="16sp"
                 android:textColor="#000000"
                 android:background="@null"
                 android:gravity="end" />
+
 
             <TextView
                 android:layout_width="0dp"
@@ -271,6 +307,7 @@
                 android:gravity="center_vertical|end" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -278,6 +315,7 @@
             android:layout_marginBottom="10dp"
             android:weightSum="10"
             android:paddingVertical="8dp">
+
 
             <TextView
                 android:layout_width="0dp"
@@ -289,6 +327,7 @@
                 android:textColor="#000000"
                 android:gravity="center_vertical" />
 
+
             <EditText
                 android:id="@+id/sugarEditText"
                 android:layout_width="0dp"
@@ -296,10 +335,12 @@
                 android:layout_weight="5"
                 android:inputType="number"
                 android:text="@string/value_100"
+                android:hint="Not Found"
                 android:textSize="16sp"
                 android:textColor="#000000"
                 android:background="@null"
                 android:gravity="end" />
+
 
             <TextView
                 android:layout_width="0dp"
@@ -312,6 +353,7 @@
                 android:gravity="center_vertical|end" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -319,6 +361,7 @@
             android:layout_marginBottom="10dp"
             android:weightSum="10"
             android:paddingVertical="8dp">
+
 
             <TextView
                 android:layout_width="0dp"
@@ -330,6 +373,7 @@
                 android:textColor="#000000"
                 android:gravity="center_vertical" />
 
+
             <EditText
                 android:id="@+id/fiberEditText"
                 android:layout_width="0dp"
@@ -337,10 +381,12 @@
                 android:layout_weight="5"
                 android:inputType="number"
                 android:text="@string/value_100"
+                android:hint="Not Found"
                 android:textSize="16sp"
                 android:textColor="#000000"
                 android:background="@null"
                 android:gravity="end" />
+
 
             <TextView
                 android:layout_width="0dp"
@@ -353,6 +399,7 @@
                 android:gravity="center_vertical|end" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -360,6 +407,7 @@
             android:orientation="horizontal"
             android:weightSum="10"
             android:paddingVertical="8dp">
+
 
             <TextView
                 android:layout_width="0dp"
@@ -371,6 +419,7 @@
                 android:textColor="#000000"
                 android:gravity="center_vertical" />
 
+
             <EditText
                 android:id="@+id/sodiumEditText"
                 android:layout_width="0dp"
@@ -378,10 +427,12 @@
                 android:layout_weight="5"
                 android:inputType="number"
                 android:text="@string/value_100"
+                android:hint="Not Found"
                 android:textSize="16sp"
                 android:textColor="#000000"
                 android:background="@null"
                 android:gravity="end" />
+
 
             <TextView
                 android:layout_width="0dp"
@@ -394,6 +445,7 @@
                 android:gravity="center_vertical|end" />
         </LinearLayout>
 
+
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
@@ -402,6 +454,7 @@
             android:visibility="gone"
             android:indeterminateTint="#8BC34A"
             android:layout_marginTop="16dp"/>
+
 
         <Button
             android:id="@+id/gradingButton"
@@ -413,4 +466,6 @@
             android:textColor="#FFFFFF"
             android:backgroundTint="#8BC34A" />
     </LinearLayout>
-</ScrollView>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
