--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -57,7 +57,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/itemUser"
+            android:id="@+id/itemNama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User"
