--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/tx_profile"
+                android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -77,7 +77,7 @@
                 app:cardElevation="2dp">
 
                 <ImageView
-                    android:id="@+id/img_profile"
+                    android:id="@+id/ivProfileImage"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:contentDescription="@string/profile_image"
