--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -68,7 +68,7 @@
                 app:cardElevation="2dp">
 
                 <ImageView
-                    android:id="@+id/img_profile"
+                    android:id="@+id/ivProfileImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:contentDescription="@string/profile_image"
