EDIT PROFILE, DELETE, FORGOT, BLOM COMMIT TP SUDAH JADI DARITADI

--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -10,21 +10,32 @@
         android:id="@+id/tv_forgot_password_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lupa Passwor"
+        android:text="Lupa Password"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="10dp" />
 
     <TextView
-        android:id="@+id/tvQuestionDescription"
-        android:layout_width="wrap_content"
+        android:id="@+id/email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Silakan periksa email anda untuk mengganti password"
-        android:textSize="16sp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/regis_email"
         android:textColor="#666666"
-        android:gravity="center"
-        android:layout_marginBottom="16dp" />
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/etEditName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter your email"
+        android:inputType="textEmailAddress"
+        android:textSize="16sp"
+        android:padding="12dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/form_nama_shape" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,8 +48,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tutup"
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@color/red"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/btnSend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kirim"
             style="@style/ButtonStart.SecondaryVariant"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp" />
+            android:textColor="@android:color/white" />
     </LinearLayout>
 </LinearLayout>
